# CalibrationApp

./: CMakeLists.txt  L2.vtk  README.md  eccTrackerWidget.cpp  eccTrackerWidget.h  jacobi.h  lu.h  main.cpp  mainWidget.cpp  mainWidget.h  mathUtils.cpp  mathUtils.h  matrix.h  qlightwidget.cpp  qlightwidget.h  svd.h
Configurations/: config.xml  left_calibration.xml
NDIToolDefinitions/: HMDUpdate.rom  Stylus_Update7.rom
